fix #175 - newInstance() in Class has been deprecated